fix some layout issues

--- a/word_match/static/css/app.css
+++ b/word_match/static/css/app.css
@@ -56,6 +56,7 @@ body {
 
 .player-card {
   padding: 1em .5em .5em 1em;
+  cursor: pointer;
 }
 
 .player-card a {
